removed some extra icons and changed the css to fix the background image on mobile

--- a/style.css
+++ b/style.css
@@ -1612,7 +1612,7 @@ form .fields{
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
-        background-attachment: fixed;
+        /* background-attachment: fixed; */
         overflow: hidden;
     }
 }
